--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,20 @@
+#Use the official Node.js image from the Docker Hub
 FROM node:20-alpine
 
+# Set the working directory in the container
 WORKDIR /app
 
+# Copy the package.json and package-lock.json files into the container
 COPY package*.json ./
 
+# Install the dependencies specified in the package.json file
 RUN npm install
 
+# Copy the rest of the application code into the container
 COPY . .
 
+# Expose the port the app runs on
 EXPOSE 5173
 
+# Specify the command to run on container start
 CMD npm run dev
