--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -18,4 +18,4 @@ EXPOSE 8000
 
 # Specify the command to run on container start
 # CMD python api.py
-CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
